<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.asu.seawavesapp.SetupActivity">
    <item
        android:id="@+id/action_calibrate"
        android:orderInCategory="100"
        android:title="@string/action_calibrate"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:title="@string/action_upload"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/action_setting"
        app:showAsAction="never" />
</menu>