<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalibrationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:theme="@style/Theme.SEAWAVeSApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:gravity="start"
            app:popupTheme="@style/Theme.SEAWAVeSApp.PopupOverlay" >

            <ImageView
                android:id="@+id/tv_header_title"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/seawaves_icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/dark_gray"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/bottom_padding"
                android:paddingEnd="@dimen/bottom_padding"
                android:textSize="24sp"
                android:text="@string/title_activity_calibrate" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/calibration_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="24sp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calibration_subtitle"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/compass_calibration"
        android:contentDescription="@string/calibrate_image"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/compass_accuracy" />

        <TextView
            android:id="@+id/calib_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Low"
            android:textColor="@color/red"/>
    </LinearLayout>
    
    <Button
        android:id="@+id/calib_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/done"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"/>
</LinearLayout>