<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:theme="@style/Theme.SEAWAVeSApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbAbout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:gravity="start"
            app:theme="@style/Theme.SEAWAVeSApp.PopupOverlay" >
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_intro"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/fab_margin"
                android:paddingEnd="@dimen/bottom_padding"
                android:text="@string/salido"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/fab_margin"
                android:paddingEnd="@dimen/bottom_padding"
                android:text="@string/gelonga"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/fab_margin"
                android:paddingEnd="@dimen/bottom_padding"
                android:text="@string/porcal"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/fab_margin"
                android:paddingEnd="@dimen/bottom_padding"
                android:text="@string/popes"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/fab_margin"
                android:paddingEnd="@dimen/bottom_padding"
                android:text="@string/oquendo"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/fab_margin"
                android:paddingEnd="@dimen/bottom_padding"
                android:text="@string/martires"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/fab_margin"
                android:paddingEnd="@dimen/bottom_padding"
                android:text="@string/hilario"
                android:textSize="16sp"
                android:textColor="@color/black" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>