<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetupActivity"
    android:background="@color/teal_700">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:theme="@style/Theme.SEAWAVeSApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black_overlay"
            app:popupTheme="@style/Theme.SEAWAVeSApp.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:textSize="24sp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="25dp"
            android:text="@string/cal_instructions"
            android:textColor="@color/light_gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bottom_padding"
            android:layout_gravity="center"
            android:background="@drawable/rounded_rect_bg">

            <TextView
                android:id="@+id/tvSetupPitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="@dimen/inner_rect_margin"
                android:background="@drawable/rounded_rect"
                android:padding="@dimen/setup_margin"
                android:text="0.00"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/pitch_title"
                android:textColor="@color/light_gray"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bottom_padding"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_gravity="center"
            android:background="@drawable/rounded_rect_bg">

            <TextView
                android:id="@+id/tvSetupRoll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="@dimen/inner_rect_margin"
                android:background="@drawable/rounded_rect"
                android:padding="@dimen/setup_margin"
                android:text="0.00"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/roll_title"
                android:textColor="@color/light_gray"
                android:textSize="14sp" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/bottom_margin" >

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/bottom_padding"
                android:layout_marginRight="@dimen/bottom_padding"
                android:layout_alignParentLeft="true"
                android:background="@drawable/rounded_rect_bg">

                <TextView
                    android:id="@+id/setup_sim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/inner_rect_margin"
                    android:background="@drawable/rounded_rect"
                    android:padding="@dimen/setup_margin"
                    android:text="SIM1"
                    android:textColor="@color/white"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/selected_sim"
                    android:textColor="@color/light_gray"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/bottom_padding"
                android:layout_alignParentRight="true"
                android:background="@drawable/rounded_rect_bg">

                <TextView
                    android:id="@+id/setup_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/inner_rect_margin"
                    android:background="@drawable/rounded_rect"
                    android:padding="@dimen/setup_margin"
                    android:text="HIGH"
                    android:textColor="@color/white"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/compass_accuracy"
                    android:textColor="@color/light_gray"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btStart"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_200"
                android:text="@string/cal_start"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>